# mcp-clickhouse

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
src/mcp_clickhouse/: __init__.py  client.py  config.py  server.py
src/mcp_clickhouse/tools/: __init__.py  monitoring.py  queries.py
tests/: test_tools.py
