[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-clickhouse"
version = "0.1.0"
description = "MCP server for interacting with ClickHouse via FastMCP"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.scripts]
mcp-clickhouse = "mcp_clickhouse.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_clickhouse"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
